# pathscheme

./: Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
src/: lib.rs  schemars.rs  serde.rs
