[package]
name = "pathscheme"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/olix0r/pathscheme"
keywords = ["http", "router", "path", "url", "url-router"]
description = "A basic path matching language"

[dependencies]
indexmap = "1"
serde = { version = "1", optional = true, default-features = false }
schemars = { version = "0.8", optional = true, default-features = false }
thiserror = "1"

[dev-dependencies]
serde_test = { version = "1", default-features = false }
